# AlgoHlper

./: .gitignore  README.md  algorithm_duipai_agent_dev_doc.md  pyproject.toml
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: code-editor.tsx  copy-button.tsx  problem-spec-editor.tsx  workbench.tsx
docs/: DEV_PROGRESS.md
scripts/: start_api.ps1  start_web.ps1  start_worker.ps1
src/algohlper/: cli.py  config.py  models.py  utils.py
src/algohlper/api/: app.py
src/algohlper/services/: asset_validation.py  codegen.py  duel.py  inprocess_queue.py  job_runner.py  problem_parser.py  starter_assets.py  storage.py  task_queue.py  tasks.py
src/algohlper/worker/: celery_app.py  tasks.py
tests/: test_api_smoke.py  test_asset_validation.py  test_codegen_repair.py  test_config.py  test_duel_engine.py  test_problem_parser.py
tmp_test_celery/projects/: prj_c767038762b5.json
tmp_test_celery/tasks/: tsk_8d0dd09b2edf.json
tmp_test_data/projects/: prj_81737b101199.json
tmp_test_data/tasks/: tsk_85dcf5484bde.json
