[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algohlper"
version = "0.1.0"
description = "AlgoHlper MVP backend, CLI, and local duel engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0"
]
openai = [
  "openai>=1.79.0,<2.0"
]
queue = [
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0"
]

[project.scripts]
algohlper = "algohlper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
